--- a/inventory-management-system/package.json
+++ b/inventory-management-system/package.json
@@ -8,6 +8,7 @@
     "react": "^16.12.0",
     "react-bootstrap-table": "^4.3.1",
     "react-dom": "^16.12.0",
+    "react-router": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-tabs": "^3.0.0",
     "semantic-ui-react": "^0.88.1"
