--- a/inventory-management-system/package.json
+++ b/inventory-management-system/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.26.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.0",
     "react": "^16.12.0",
     "react-bootstrap-table": "^4.3.1",
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-tabs": "^3.0.0",
     "semantic-ui-react": "^0.88.1"
