--- a/inventory-management-system/package.json
+++ b/inventory-management-system/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.26.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.0",
+    "materialize-css": "^1.0.0-rc.2",
     "react": "^16.12.0",
     "react-bootstrap-table": "^4.3.1",
     "react-dom": "^16.12.0",
