--- a/inventory-management-system/package.json
+++ b/inventory-management-system/package.json
@@ -6,8 +6,9 @@
     "antd": "^3.26.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.0",
-    "mdbreact": "^4.23.0",
+    "history": "^4.10.1",
     "materialize-css": "^1.0.0-rc.2",
+    "mdbreact": "^4.23.0",
     "react": "^16.12.0",
     "react-bootstrap-table": "^4.3.1",
     "react-dom": "^16.12.0",
