--- a/inventory-management-system/package.json
+++ b/inventory-management-system/package.json
@@ -9,6 +9,7 @@
     "history": "^4.10.1",
     "materialize-css": "^1.0.0-rc.2",
     "mdbreact": "^4.23.0",
+    "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-bootstrap-table": "^4.3.1",
     "react-dom": "^16.12.0",
